--- a/TODO
+++ b/TODO
@@ -1,11 +1,11 @@
-Sun Feb 11 10:39:22 CST 2018
+Wed Feb 14 08:47:17 CST 2018
 
 WIP
 ---
-* fix marker alignment / adjust layout based on direction
-
-* finish GUI elements & helpers
-  * add arc, place, transition, and markings
+* fix marker spacing
+* attach drag behaviors to _handler
+  * should transform graphic while moving
+  * should move nodes and redraw after drag stop
 
 BACKLOG
 -------
