--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-Wed Feb 14 08:47:17 CST 2018
+Thu Feb 15 07:54:13 CST 2018
 
 WIP
 ---
@@ -9,6 +9,8 @@ WIP
 
 BACKLOG
 -------
+* allow petri-net json to be written back to disk
+  * as PNML
 
 * build out Petri-Net editor
   * render petri-net from machine def
